# hyperzoekt

./: .dockerignore  .gitignore  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  LICENSE  NOTICE  README.md  history.txt  test_relations.surql  test_repos.csv
crates/hyperzoekt/: Cargo.toml  hyperzoekt.toml
crates/hyperzoekt/db/: surreal_examples.surql  surreal_schema.surql
crates/hyperzoekt/src/: db_writer.rs  event_consumer.rs  graph_api.rs  hirag.rs  index.rs  internal.rs  lib.rs  llm.rs  mcp.rs  otel.rs  service.rs  similarity.rs  test_utils.rs  utils.rs  watcher.rs
crates/hyperzoekt/src/db/: branch.rs  config.rs  connection.rs  content.rs  helpers.rs  mod.rs  models.rs  queries.rs  refs.rs  tests.rs  writer.rs
crates/hyperzoekt/src/db_writer/: config.rs  connection.rs  content.rs  helpers.rs  mod.rs  refs.rs  repo_deps.rs  writer.rs
crates/hyperzoekt/src/repo_index/: builder.rs  deps.rs  graph.rs  mod.rs  pagerank.rs  search.rs  types.rs
crates/hyperzoekt/src/repo_index/indexer/: extract.rs  helpers.rs  index.rs  langspec.rs  mod.rs  payload.rs  types.rs
crates/hyperzoekt/static/webui/: base.html  dependencies.html  dupes.html  entity.html  hirag-mindmap.html  hirag.html  index.html  pagerank.html  repo.html  sbom.html  search.html
crates/hyperzoekt/tests/: appconfig.rs  basic.rs  bin_integration.rs  call_edges.rs  debug_caller_entity.rs  debug_find_names.rs  debug_fixture_index.rs  debug_integration.rs  dependencies_remote.rs  dependency_edges_strict.rs  dependency_graph_integration.rs  deps_api_integration.rs  duplicate_create.rs  embed_bind_integration.rs  embedding_chunking.rs  entity_relations.rs  entity_snapshot_commit_query.rs  entity_snapshot_commit_query.rs.new  entity_template.rs  expected_values.json  file_repo_edges.rs  get_repo_default_branch.rs  git_url_normalization.rs  graph.rs  graph_api_call_edges_integration.rs  has_method_integration.rs  hirag_integration.rs  hirag_mcp_test.rs  indexer_integration.rs  integration_persist.rs  integration_sbom_worker.rs  js_import_aliases.rs  lines.rs  llm_test.rs  mcp_handler_integration.rs  mcp_repo_ref.rs  mcp_stdio_e2e.rs  method_extraction.rs  pagerank.rs  pagination_tests.rs  (+29 more)
crates/hyperzoekt/tests/fixtures/: fixture_bom.json
crates/hyperzoekt/tests/fixtures/example-treesitter-repo/: README.md
crates/repo-index/: Cargo.toml
crates/repo-index/src/: internal.rs  lib.rs  service.rs
crates/repo-index/tests/: basic.rs  bin_integration.rs  expected_values.json  lines.rs
crates/zoekt/: Cargo.toml  PORTING.md  README.md
crates/zoekt-bench/: Cargo.toml  README.md
crates/zoekt-bench/benches/: shard_write_bench.rs
crates/zoekt-cli/: Cargo.toml
crates/zoekt-distributed/: Cargo.toml  README.md  config.toml
crates/zoekt-distributed/src/: config.rs  distributed_search.rs  lease_manager.rs  lib.rs  node.rs  poller.rs  redis_adapter.rs  surreal_repo_store.rs  test_utils.rs  web_utils.rs
crates/zoekt-distributed/static/: admin.js  index.html  login.html
crates/zoekt-distributed/static/admin/: admin.js  index.html  login.html
crates/zoekt-distributed/static/common/: styles.css  theme.js
crates/zoekt-distributed/static/search/: index.html
crates/zoekt-distributed/tests/: branch_lease_integration.rs  login_flow_integration.rs  redis_integration.rs
crates/zoekt-rs/: Cargo.toml  PORTING.md
crates/zoekt-rs/benches/: parse_bench.rs  shard_write_bench.rs
crates/zoekt-rs/src/: index.rs  lib.rs  query.rs  regex_analyze.rs  shard.rs  test_helpers.rs  trigram.rs  types.rs  typesitter.rs
crates/zoekt-rs/src/index/: builder.rs  error.rs  git.rs  in_memory.rs  mod.rs  process.rs  utils.rs
crates/zoekt-rs/src/query/: ast.rs  helpers.rs  mod.rs  plan.rs
crates/zoekt-rs/src/query/searcher/: eval.rs  mod.rs  plan_helpers.rs  plan_search.rs
crates/zoekt-rs/src/shard/: mod.rs  reader.rs  searcher.rs  utils.rs  writer.rs  writer_utils.rs
crates/zoekt-rs/testdata/: upstream_query_inputs.txt
crates/zoekt-rs/tests/: boolean_queries.rs  branch_selection.rs  clone_fallback_integration.rs  content_only.rs  default_union.rs  go_regex_additional.rs  go_regex_cases.rs  index_builder_ignore_and_size.rs  plan_helpers.rs  process_pending.rs  query_filters.rs  query_microbench.rs  regex_analyze.rs  regex_prefilter.rs  remote_integration.rs  shard_tests.rs  smoke.rs  symbol_select.rs  symbol_unicode.rs  trigrams.rs  writer_utils.rs
crates/zoekt-rs/tests/common/: mod.rs
crates/zoekt-rs/tests/fixtures/cpp/: functions_and_templates.cpp  template_specialization.cpp  templates_simple.h
crates/zoekt-rs/tests/fixtures/csharp/: Generics.cs  Interface.cs  NamespaceNested.cs  SimpleClass.cs
crates/zoekt-rs/tests/fixtures/go/: advanced.go  generics.go  nested.go  simple.go
crates/zoekt-rs/tests/fixtures/java/: Interface.java  Nested.java  Simple.java  Types.java
crates/zoekt-rs/tests/fixtures/javascript/: async_and_exports.js  nested.js  simple.js
crates/zoekt-rs/tests/fixtures/ocaml/: foo_main.ml  sample1.ml  sample2.mli  sample3.ml  sample4.ml
crates/zoekt-rs/tests/fixtures/python/: annotations_and_defs.py  async_defs.py  decorators.py  module_assignments.py  nested_classes.py  simple_module.py
crates/zoekt-rs/tests/fixtures/rust/: associated_types.rs  enums.rs  extensions.rs  generics_where.rs  macro_funcs.rs  macros.rs  nested_where.rs  proc_macros.rs  traits.rs
crates/zoekt-rs/tests/fixtures/swift/: conformance.swift  enums.swift  extensions.swift  generics.swift  protocols.swift  simple.swift
crates/zoekt-rs/tests/fixtures/typescript/: ambient_module.d.ts  async_and_exports.ts  component.tsx  declaration_merging.ts  generics.ts  interfaces.ts  nested.ts  simple.ts  (+2 more)
crates/zoekt/src/: index.rs  lib.rs  query.rs  regex_analyze.rs  shard.rs  trigram.rs  types.rs  typesitter.rs
crates/zoekt/tests/: boolean_queries.rs  branch_selection.rs  content_only.rs  go_regex_parity.rs  go_regex_ported_cases.rs  index_builder_ignore_and_size.rs  query_filters.rs  query_microbench.rs  symbol_select.rs  typesitter_extract.rs  upstream_query_golden.rs
tmp_runner/: Cargo.toml
tmp_runner/src/: main.rs
(+136 files in other folders)
