[workspace]
members = [
	"crates/hyperzoekt",
	"crates/zoekt-rs",
	"crates/zoekt-cli",
	"crates/zoekt-bench",
	"crates/zoekt-tools",
]

# Use the edition-2021 dependency resolver semantics for workspace members.
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 16
