[package]
name = "tmp_runner"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
hyperzoekt = { path = "../crates/hyperzoekt" }
tempfile = "3"
rayon = "1.7"
tree-sitter = "0.23"
ignore = "0.4"
zoekt-rs = { path = "../crates/zoekt-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
