[package]
name = "hyperzoekt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
walkdir = "2"
regex = "1"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = { version = "0.23", package = "tree-sitter-python" }
tree-sitter-javascript = { version = "0.23", package = "tree-sitter-javascript" }
tree-sitter-typescript = { version = "0.23", package = "tree-sitter-typescript" }
tree-sitter-cpp = "0.23"
tree-sitter-java = { version = "0.23", package = "tree-sitter-java" }
tree-sitter-c-sharp = { version = "0.23", package = "tree-sitter-c-sharp" }
tree-sitter-swift = { version = "0.6", package = "tree-sitter-swift" }
tree-sitter-go = { version = "0.23", package = "tree-sitter-go" }
tree-sitter-verilog = "1.0"

clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

# SurrealDB client for importer/streaming integration. This is a core dependency.
surrealdb = { version = "2.3", features = ["kv-mem"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
notify = "6"
toml = "0.7"
sha2 = "0.10"
signal-hook = "0.3"
rust-mcp-sdk = { version = "0.6", features = ["server"] }
rust-mcp-transport = { version = "0.5" }
hyper = { version = "0.14", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "2"

[[bin]]
name = "hyperzoekt"
path = "src/bin/hyperzoekt.rs"


