[package]
name = "hyperzoekt"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
walkdir = "2"
regex = "1"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = { version = "0.23", package = "tree-sitter-python" }
tree-sitter-javascript = { version = "0.23", package = "tree-sitter-javascript" }
tree-sitter-typescript = { version = "0.23", package = "tree-sitter-typescript" }
tree-sitter-cpp = "0.23"
tree-sitter-java = { version = "0.23", package = "tree-sitter-java" }
tree-sitter-c-sharp = { version = "0.23", package = "tree-sitter-c-sharp" }
tree-sitter-swift = { version = "0.6", package = "tree-sitter-swift" }
tree-sitter-go = { version = "0.23", package = "tree-sitter-go" }
tree-sitter-verilog = "1.0"

clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

# SurrealDB client for importer/streaming integration. This is a core dependency.
surrealdb = { version = "2.3", features = ["kv-mem", "protocol-ws", "protocol-http"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.9"
sha2 = "0.10"
signal-hook = "0.3.18"
petgraph = "0.6"

# Redis for event consumption from zoekt-distributed
deadpool-redis = "0.17"
redis = { version = "0.27", features = ["tokio-comp"] }
libc = "0.2"

# Git for cloning remote repositories
git2 = "0.20"

# UUID for unique temporary directory names
uuid = { version = "1.0", features = ["v4"] }

# zoekt-distributed for shared event types
zoekt-distributed = { path = "../zoekt-distributed" }

# Web UI dependencies
axum = { version = "0.7", features = ["json", "query"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
minijinja = "1.0"
url = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serial_test = "0.5"

[[bin]]
name = "hyperzoekt-indexer"
path = "src/bin/hyperzoekt-indexer.rs"

[[bin]]
name = "hyperzoekt-webui"
path = "src/bin/hyperzoekt-webui.rs"


