[package]
name = "repo-index"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
walkdir = "2"
regex = "1"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = { version = "0.23", package = "tree-sitter-python" }
tree-sitter-javascript = { version = "0.23", package = "tree-sitter-javascript" }
tree-sitter-typescript = { version = "0.23", package = "tree-sitter-typescript" }
tree-sitter-cpp = "0.23"
tree-sitter-java = { version = "0.23", package = "tree-sitter-java" }
tree-sitter-c-sharp = { version = "0.23", package = "tree-sitter-c-sharp" }
tree-sitter-swift = { version = "0.6", package = "tree-sitter-swift" }
tree-sitter-go = { version = "0.23", package = "tree-sitter-go" }
tree-sitter-verilog = "1.0"

clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "2"


