[package]
name = "zoekt-cli"
version = "0.0.1"
edition = "2021"
description = "CLI tools for zoekt-rs (index/search)"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
zoekt-rs = { path = "../zoekt-rs" }
walkdir = "2"
regex = "1"
serde_json = "1"
indicatif = "0.18"
