[package]
name = "zoekt-distributed"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
# depend on the local workspace crate
zoekt-rs = { path = "../zoekt-rs" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
deadpool-redis = "0.18"
base64 = "0.22"
# Pin redis to 0.21 to avoid mixed-version future-compat warnings (0.23 is present in the
# workspace lockfile via other dependencies). deadpool-redis currently depends on 0.21.x,
# and using 0.21 keeps the crate graph consistent.
redis = { version = "0.27", features = ["script"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
clap = { version = "4", features = ["derive"] }
toml = "0.7"
axum = { version = "0.6", features = ["headers"] }
tower-http = { version = "0.3", features = ["auth"] }
htmlescape = "0.3"
rand = "0.8"
hmac = "0.12"
async-trait = "0.1"
sha2 = "0.10"

[[bin]]
name = "dzr-http-search"
path = "src/bin/dzr-http-search.rs"

[[bin]]
name = "dzr-mcp-search"
path = "src/bin/dzr-mcp-search.rs"

[[bin]]
name = "dzr-indexer"
path = "src/bin/dzr-indexer.rs"

[[bin]]
name = "dzr-admin"
path = "src/bin/dzr-admin.rs"

[dev-dependencies]
# use the zoekt-rs test helpers to make small repo indexes
proptest = "1"
tempfile = "3"
serial_test = "2"
http = "0.2"
tower = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

