[package]
name = "zoekt-rs"
version = "0.0.1"
edition = "2021"
description = "Minimal Zoekt-like text indexer/searcher in Rust for hyperzoekt workspace"
license = "Apache-2.0"
repository = "https://github.com/dcieslak19973/hyperzoekt"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
memmap2 = "0.9"
thiserror = "1"
tracing = "0.1"
parking_lot = "0.12"
fnv = "1"
walkdir = "2"
pathdiff = "0.2"
sha2 = "0.10"
ignore = "0.4"
lru = "0.8"

[dev-dependencies]
proptest = "1"
tempfile = "3"
