[package]
name = "zoekt-rs"
version = "0.0.1"
edition = "2021"
description = "Minimal Zoekt-like text indexer/searcher in Rust for hyperzoekt workspace"
license = "Apache-2.0"
repository = "https://github.com/dcieslak19973/hyperzoekt"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
memmap2 = "0.9"
thiserror = "1"
tracing = "0.1"
parking_lot = "0.12"
fnv = "1"
walkdir = "2"
pathdiff = "0.2"
sha2 = "0.10"
ignore = "0.4"
lru = "0.8"
globset = "0.4"
tree-sitter = "0.23"
tree-sitter-rust = { version = "0.23", package = "tree-sitter-rust" }
tree-sitter-go = { version = "0.23", package = "tree-sitter-go" }
tree-sitter-python = { version = "0.23", package = "tree-sitter-python" }
tree-sitter-javascript = { version = "0.23", package = "tree-sitter-javascript" }
tree-sitter-typescript = { version = "0.23", package = "tree-sitter-typescript" }
tree-sitter-cpp = "0.23"
tree-sitter-java = { version = "0.23", package = "tree-sitter-java" }
tree-sitter-c-sharp = { version = "0.23", package = "tree-sitter-c-sharp" }
tree-sitter-swift = { version = "0.6", package = "tree-sitter-swift" }
tree-sitter-verilog = "1.0"
regex-syntax = "0.6"
tempfile = "3"
git2 = "0.16"
once_cell = "1"
rayon = "1"

[dev-dependencies]
proptest = "1"
